@@ -1,6 +1,6 @@
 /* This testcase is part of GDB, the GNU debugger.
 
-   Copyright 2009-2013 Free Software Foundation, Inc.
+   Copyright 2009, 2010, 2011 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -16,14 +16,7 @@
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    */
 
-template <typename T>
-long
-func ()
+typedef int typedefed;
+void func (typedefed param)
 {
-}
-
-void
-f ()
-{
-  func<short> ();
 }
