@@ -1,4 +1,4 @@
-# Copyright 2011-2013 Free Software Foundation, Inc.
+# Copyright 2011 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -15,14 +15,18 @@
 
 if { [skip_cplus_tests] } { continue }
 
-standard_testfile .cc
 
-if { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}.x" object {debug c++}] != "" } {
+set testfile psymtab-parameter
+set executable ${testfile}.x
+set srcfile ${testfile}.cc
+set binfile ${objdir}/${subdir}/${executable}
+
+if { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" object {debug c++}] != "" } {
     untested ${testfile}.exp
     return -1
 }
 
-clean_restart $testfile.x
+clean_restart $executable
 
 # As `main' is not present GDB fails to find the proper inferior language.
 gdb_test_no_output "set language c++"
@@ -31,6 +35,5 @@ gdb_test_no_output "set language c++"
 # XFAIL than FAIL here.  For example -readnow breaks it.
 gdb_test_no_output "maintenance info symtabs"
 
-# GDB has shown only the `long func<short>()' ELF symbol before, not the DWARF
-# symbol
-gdb_test "complete p 'func<short>(" "p 'func<short>\\(\\)"
+# GDB has shown only the `func(int)' entry before.
+gdb_test "complete break 'func(" "break 'func\\(int\\)\r\nbreak 'func\\(typedefed\\)"
