@@ -1,3 +1,8 @@
+2011-05-06  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* gdb.cp/psymtab-parameter.cc: New file.
+	* gdb.cp/psymtab-parameter.exp: New file.
+
 2011-04-29  Phil Muldoon  <pmuldoon@redhat.com>
 
 	PR mi/12531
